--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,11 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home Page</title>
 </head>
 <body>
-<section>
-    <h1>Home</h1>
+<section class="banner d-flex justify-content-center align-items-center ">
+   <div class="text-center">
+       <h1 class="font-weight-bold">Smart Contact Manager</h1>
+       <p>
+           Start collecting your contacts in very smarter way. We provide very efficient and smarter
+           way of handling contacts.
+       </p>
+       <button class="btn bg-primary btn-lg text-white">Get Started</button>
+   </div>
 </section>
 </body>
 </html>
