--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
     <title th:text="${title}"></title>
@@ -13,7 +14,7 @@
 
 <!--navbar-->
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-primary">
+<nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary navbar-dark bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Smart Contact Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,30 +25,58 @@
                 <li class="nav-item">
                     <a class="nav-link active" th:href="@{/}" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" tabindex="-1"
-                       th:href="@{/signin}">Login</a>
+                       th:text="${user.name}"></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link " th:href="@{/signup}" tabindex="-1"
-                       >Signup</a>
+                    <a class="nav-link " th:href="@{/logout}" tabindex="-1"
+                       >Logout</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
 <!--End navbar-->
 
-<div th:replace="${content}"></div>
+<!-- Start of Sidebar  -->
+<div class="sidebar mt-2">
+
+    <span onclick="toggleSidebar()" class="crossBtn">
+        &times;
+    </span>
+
+    <a href="#" th:href="@{/user/index}" class="item"> <i class="fa-solid fa-house"></i> Home</a>
+    <a href="#" class="item"> <i class="fa-solid fa-id-card-alt"></i> View Contacts</a>
+    <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-pencil-alt"></i> Add Contacts</a>
+    <a href="#" class="item"> <i class="fa-solid fa-user-circle"></i> Your Profile</a>
+    <a href="#" class="item"> <i class="fa-solid fa-cogs"></i> Settings</a>
+    <a href="#" th:href="@{/logout}" class="item"> <i class="fa-solid fa-sign-out-alt"></i> Logout</a>
+
+    <div class="divider">
+
+    </div>
+
+</div>
+
+<!--End Sidebar-->
+
+<!-- Start of Content  -->
+
+<div class="content mt-5">
+
+    <i onclick="toggleSidebar()" class="fa-solid fa-bars m-3"></i>
+
+    <div th:replace="${content}"></div>
+</div>
+
+<!-- End of Content  -->
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-<script th:scr="@{/js/script.js}"></script>
+<script src="/js/script.js" type="text/javascript" ></script>
+<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
 </body>
 </html>
