--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -27,11 +27,18 @@
 
                 <tr th:each="c : ${contacts}">
                     <th scope="row" th:text="${'USER' + c.cId}">1</th>
-                    <td th:text="${c.name}">Mark</td>
-                    <td th:text="${c.email}">Otto</td>
+                    <td>
+                        <img class="my_profile_picture" th:src="@{'/img/' + ${c.image}}" src="" alt="profile photo">
+                        <span th:text="${c.name}"></span>
+                    </td>
+                    <td>
+                        <a href="#" th:href="@{'/user/' + ${c.cId} + '/view_contact_info'}">
+                            <span th:text="${c.email}"></span>
+                        </a>
+                    </td>
                     <td th:text="${c.phone}">@mdo</td>
                     <td >
-                        <button class="btn btn-danger btn-sm">Delete</button>
+                        <button th:onclick="|deleteContact(${c.cId})|" class="btn btn-danger btn-sm">Delete</button>
                         <button class="btn btn-primary btn-sm">Update</button>
                     </td>
                 </tr>
@@ -43,7 +50,7 @@
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
                     <li th:if="${currentPage != 0}" class="page-item"><a th:href="@{'/user/show-contacts/' + ${currentPage-1}}" class="page-link" href="#">Previous</a></li>
-                    <li th:if="${totalPages != 0}" th:each="i : ${#numbers.sequence(1, totalPages)}" th:classappend="${currentPage == i-1 ? 'active' : ''}" class="page-item"><a th:href="@{'/user/show-contacts/' + ${i-1}}" class="page-link" href="#"><span th:text="${i}"></span></a></li>
+                    <li th:if="${totalPages > 1}" th:each="i : ${#numbers.sequence(1, totalPages)}" th:classappend="${currentPage == i-1 ? 'active' : ''}" class="page-item"><a th:href="@{'/user/show-contacts/' + ${i-1}}" class="page-link" href="#"><span th:text="${i}"></span></a></li>
                     <li th:if="${currentPage < totalPages-1}" class="page-item"><a th:href="@{'/user/show-contacts/' + ${currentPage+1}}" class="page-link" href="#">Next</a></li>
                 </ul>
             </nav>
