implemented Update contact operation and profile page for user and user dashboard

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
            Start collecting your contacts in very smarter way. We provide very efficient and smarter
            way of handling contacts.
        </p>
-       <button class="btn bg-primary btn-lg text-white">Get Started</button>
+       <a th:href="@{/signin}" class="btn bg-primary btn-lg text-white">Get Started</a>
    </div>
 </section>
 </body>
