--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -51,8 +51,8 @@
     <a href="#" th:href="@{/user/index}" class="item"> <i class="fa-solid fa-house"></i> Home</a>
     <a href="#" th:href="@{/user/show-contacts/0}" class="item"> <i class="fa-solid fa-id-card-alt"></i> View Contacts</a>
     <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-pencil-alt"></i> Add Contacts</a>
-    <a href="#" class="item"> <i class="fa-solid fa-user-circle"></i> Your Profile</a>
-    <a href="#" class="item"> <i class="fa-solid fa-cogs"></i> Settings</a>
+    <a href="#" th:href="@{/user/profile}" class="item"> <i class="fa-solid fa-user-circle"></i> Your Profile</a>
+<!--    <a href="#" class="item"> <i class="fa-solid fa-cogs"></i> Settings</a>-->
     <a href="#" th:href="@{/logout}" class="item"> <i class="fa-solid fa-sign-out-alt"></i> Logout</a>
 
     <div class="divider">
@@ -67,7 +67,7 @@
 
 <div class="content mt-5">
 
-    <i onclick="toggleSidebar()" class="fa-solid fa-bars m-3"></i>
+    <i onclick="toggleSidebar()" class="fa-solid fa-bars m-3" style="font-size: 36px;"></i>
 
     <div th:replace="${content}"></div>
 </div>
