--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -9,7 +9,29 @@
 </head>
 <body>
 <section>
-    <h1>This is private dashboard page</h1>
+    <div class="container">
+        <div class="card mt-3">
+            <div class="card-body">
+                <div class="container text-center">
+                    <img style="height: 300px; width: 300px;" class="my_profile_picture" th:src="@{'/img/default_profile_image.png'}" src="" alt="photo">
+                </div>
+
+                <h1 class="text-center mt-5">
+                    Start Adding Contacts To Your Account
+                </h1>
+                <div class="container text-center mt-5">
+                    <a th:href="@{/user/add-contact}" class="btn bg-primary btn-lg text-white">Get Started</a>
+                </div>
+
+                <div class="container mt-5 text-center font-italic text-secondary">
+                    <h5>
+                        This is the one stop solution to add your contacts to the cloud so that you can check them whenever you want and access them.
+                        <p> Now you do not have to remember your personal contacts but you can setup account and add contacts to them.</p>
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
