--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,6 +25,11 @@
                                 You have been logged out
                             </div>
 
+                            <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+                                <p th:text="${session.message.content}"></p>
+                                <th:block th:text="${@sessionHelper.removeAttributesFromSession('message')}"></th:block>
+                            </div>
+
                             <div class="mb-3">
                                 <label for="username" class="text-info">Username:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
@@ -38,9 +43,13 @@
                             <div class="mb-3">
                                 <label for="remember-me" class="text-info text-start">
                                     <span>Remember me</span> <span>
-                                    <input id="remember-me" name="remember-me" type="checkbox">
-                                </span></label>
-                                    <a href="" th:href="@{/signup}" class="text-info text-end">Register here</a>
+                                        <input id="remember-me" name="remember-me" type="checkbox">
+                                    </span>
+                                </label>
+                            </div>
+                            <div class="mb-3">
+                                <a href="" th:href="@{/forgot-password}" class="text-info text-start">Forgot Password?</a>
+                                <a href="" th:href="@{/signup}" class="text-info text-end">Register here</a>
                             </div>
                             <div class="mb-3">
                                 <input type="submit" name="submit" class="btn btn-info btn-md mb-3" value="submit">
